# OpenGL-LightmapsEmbree

./: .gitignore  CMakeLists.txt  cmake-vs2017-64bit.bat
src/: main.cpp
